--- a/1-node-farm/templates/template-overview.html
+++ b/1-node-farm/templates/template-overview.html
@@ -40,7 +40,7 @@
 
       h1 {
         font-family: 'Megrim', sans-serif;
-        font-size: 6rem;
+        font-size: 4rem;
         color: white;
         transform: skewY(-5deg);
         text-align: center;
@@ -81,7 +81,7 @@
       }
 
       .card__emoji {
-        font-size: 5.5rem;
+        font-size: 3rem;
         line-height: 1.2;
         padding: 1.5rem 6rem 0.5rem 1.5rem;
         letter-spacing: -4rem;
@@ -99,7 +99,7 @@
       .card__title {
         font-family: 'Megrim', sans-serif;
         color: white;
-        font-size: 3.25rem;
+        font-size: 2.5rem;
         transform: skewX(20deg);
       }
 
@@ -192,7 +192,7 @@
       <h1>🌽 Node Farm 🥦</h1>
 
       <div class="cards-container">
-        ${%PRODUCT_CARDS%}
+        {%PRODUCT_CARDS%}
       </div>
     </div>
   </body>
