--- a/4-natours/views/base.pug
+++ b/4-natours/views/base.pug
@@ -1,1 +1,16 @@
-h1 The Park Camper
+doctype html
+html
+    head
+        title Natours
+        link(rel='stylesheet' href='css/style.css')
+        link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+    body
+        h1= tour
+        h2= user.toUpperCase()
+        p This is just some text.
+        // p This is just some text.
+        //- p This is just some text.
+        - const x = 9
+        h2= 2 * x
+        h2 Interpolation be like: #{user}, so awesome.
+
