--- a/4-natours/public/css/style.css
+++ b/4-natours/public/css/style.css
@@ -608,6 +608,29 @@ body {
   -ms-scroll-snap-type: x mandatory;
   scroll-snap-type: x mandatory;
 }
+/* width */
+.reviews::-webkit-scrollbar {
+  height: 8px;
+}
+
+/* Track */
+.reviews::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.reviews::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.reviews::-webkit-scrollbar-thumb:hover {
+  background: #333;
+}
+
+
 .reviews__card {
   width: 30rem;
   padding: 4rem;
