--- a/4-natours/views/_footer.pug
+++ b/4-natours/views/_footer.pug
@@ -8,3 +8,5 @@ footer.footer
         li: a(href='#') Careers
         li: a(href='#') Contact
     p.footer__copyright &copy; by DJ.
+
+script(src='/js/mapbox.js')
